--- a/K-means_Clustering/clustering_mnist.ipynb
+++ b/K-means_Clustering/clustering_mnist.ipynb
@@ -22,7 +22,7 @@
    "source": [
     "from display_network import *\n",
     "\n",
-    "mndata = MNIST('../MNIST-data/')\n",
+    "mndata = MNIST('../Dataset/')\n",
     "mndata.load_testing()\n",
     "X = mndata.test_images\n",
     "X0 = np.asarray(X)[:1000,:]/256.0\n",
@@ -223,7 +223,7 @@
     "import numpy as np\n",
     "from sklearn.cluster import KMeans\n",
     "\n",
-    "img = mpimg.imread('./mnist_data/girl3.jpeg')\n",
+    "img = mpimg.imread('./Dataset/girl3.jpeg')\n",
     "plt.imshow(img)\n",
     "imgplot = plt.imshow(img)\n",
     "plt.axis('off')\n",
